2009-11-16  Robin Dunn  <robin@alldunn.com>

        Reviewed by Kevin Ollivier.

        Make sure wx scrollbar drawing code factors in transforms when switching backends,
        fix calcs for scrollbar length, and tweak the Mac scrollbar tracking rects.
        
        https://bugs.webkit.org/show_bug.cgi?id=31570

        * platform/wx/ScrollbarThemeWx.cpp:
        (WebCore::ScrollbarThemeWx::minimumThumbLength):
        (WebCore::ScrollbarThemeWx::splitTrack):
        (WebCore::ScrollbarThemeWx::forwardButtonRect):
        * platform/wx/ScrollbarThemeWx.h:
        * platform/wx/wxcode/gtk/scrollbar_render.cpp:
        (wxRenderer_DrawScrollbar):
        * platform/wx/wxcode/scrollbar_render.h:
        (calcThumbStartAndLength):
        * platform/wx/wxcode/win/scrollbar_render.cpp:
        (wxRenderer_DrawScrollbar):

2009-11-16  Kent Tamura  <tkent@chromium.org>

        Reviewed by David Levin.

        Introduce WebCore::ISODateTime class.
        https://bugs.webkit.org/show_bug.cgi?id=31340

        This class represents a value of date/time types of the HTML5 INPUT
        element, and has some parsing methods for ISO 8601.

        This change has no tests because the class is not used yet.

        * GNUmakefile.am: Add ISODateTime.cpp and ISODateTime.h.
        * WebCore.gypi: ditto.
        * WebCore.pro: ditto.
        * WebCore.vcproj/WebCore.vcproj: ditto.
        * WebCore.xcodeproj/project.pbxproj: ditto.
        * WebCoreSources.bkl: ditto.
        * html/ISODateTime.cpp: Added. Implementation of WebCore::ISODateTime class.
        (WebCore::isLeapYear):
        (WebCore::maxDayOfMonth):
        (WebCore::dayOfWeek):
        (WebCore::ISODateTime::maxWeekNumberInYear):
        (WebCore::countDigits):
        (WebCore::toInt):
        (WebCore::ISODateTime::parseYear): Private helper for parseDate() and parseWeek().
        (WebCore::ISODateTime::addDay): Private helper for parseTimeZone().
        (WebCore::ISODateTime::addMinute): ditto.